Migrate to vite

--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "bonk.day",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "prettier": "prettier --write ."
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
