--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-image-optimizer": "^1.1.4"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.4.1",
     "dayjs": "^1.11.7"
   }
 }
