--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "devDependencies": {
     "prettier": "^2.8.8",
-    "sharp": "^0.32.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vite-plugin-image-optimizer": "^1.1.4"
+    "vite": "^4.3.2"
   },
   "dependencies": {
     "dayjs": "^1.11.7"
